fix: Card view adds horizontal scroll #86 (#89)
* chore: added .env file to .gitignore

* fix: Card view adds horizontal scroll #86

* chore: format RepositoryContributionsCard.tsx

* chore: format globals.css

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,3 +16,7 @@ body,
 html {
   min-height: 100vh;
 }
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
